# TabulaPrima

./: .gitignore  Dockerfile  basic_dataset_test.py  bootstrap.py  build-docker.sh  cache_manager.py  color_test.sh  config_schema.py  console.py  dataset_dimensions.py  entrypoint.sh  install.sh  model_arch.py  pyproject.toml  test_compile.py  train.py  train_harness.py  trainer.py
configs/: 4090_278m.yaml  config.yaml
configs/console/: with_live.yaml
configs/dataset/: fineweb_100bt.yaml  fineweb_10bt.yaml  fineweb_350bt.yaml  wikitext.yaml
configs/env_config/: 4090_278m.yaml  h100_1_3b.yaml
configs/model/: 1_3b_params.yaml  255m_params.yaml  278m_params.yaml  278m_params_large_context.yaml
configs/model_defs/: 1_3b_params.json  255m_params.json
configs/tokenizer/: gpt2.yaml  tiktoken.yaml
configs/training/: 1_3b_params.yaml  278m_params.yaml  4090_base.yaml  default.yaml
configs/training/optimizer/: adamw.yaml
configs/training/scheduler/: cosine_token.yaml
configs/training/wandb/: default.yaml  with_both.yaml  with_checkpoints.yaml  with_final_model.yaml
configs/training_defs/: 1_3b_params_h100.json  255m_params_2070.json  255m_params_4090.json
dataset/: datasets.py
dataset_generation/: basic_dataset_test.py  dataset_dimensions.py  subdomain_generation.py
dataset_generation/generation_datasets/: subdomains.jsonl  topics.jsonl
docs/: TabulaPrima.md  tasks.md
docs/ActionPlans/: distributed_training.md
docs/DatasetCreation/: DimensionUsage.md  LLMGenerationStrategy.md
trainers/: default.py  utils.py
